--- a/ChoreChange/ChoreChange/Resources/layout/ParentChildren.xml
+++ b/ChoreChange/ChoreChange/Resources/layout/ParentChildren.xml
@@ -12,13 +12,20 @@
         android:id="@+id/ParentAddChildButton"
         android:text="@string/ParentAddChild"
         android:textColor="@android:color/holo_green_dark"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ParentAddChildButton"
+        android:id="@+id/ParentCashoutHistory"
+        android:text="@string/CashoutHistory"
+        android:textColor="@android:color/holo_green_dark"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/Children"
         android:textColor="@android:color/black"
         android:id="@+id/ChildrenTextVIew"
-        android:layout_below="@id/ParentAddChildButton"/>
+        android:layout_below="@id/ParentCashoutHistory"/>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
