--- a/ChoreChange/ChoreChange/Resources/layout/CustomCashoutList.xml
+++ b/ChoreChange/ChoreChange/Resources/layout/CustomCashoutList.xml
@@ -8,13 +8,23 @@
         android:layout_height="wrap_content"
         android:id="@+id/CustomCashoutName"
         android:layout_marginTop="5dp"
+        android:textColor="@android:color/black"
         android:textSize="20dp"
         android:textStyle="bold"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/CustomCashoutDate"
+        android:textSize="15dp"
+        android:layout_below="@id/CustomCashoutName"
+        android:gravity="right"
+        android:textColor="@android:color/black"/>
   <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/CustomCashoutAmount"
-        android:layout_below="@id/CustomCashoutName"
+        android:layout_below="@id/CustomCashoutDate"
         android:layout_marginTop="2dp"
+        android:textColor="@android:color/black"
         android:textSize="15dp"/>
 </RelativeLayout>
