--- a/ChoreChange/ChoreChange/Resources/layout/ParentChoreClickDialog.xml
+++ b/ChoreChange/ChoreChange/Resources/layout/ParentChoreClickDialog.xml
@@ -41,6 +41,8 @@
             android:id="@+id/PictureTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:paddingLeft="5dp"
             android:text="@string/Picture"
             android:textColor="@android:color/black"/>
         <ImageView
