--- a/ChoreChange/ChoreChange/Resources/layout/CashoutHistoryDialog.xml
+++ b/ChoreChange/ChoreChange/Resources/layout/CashoutHistoryDialog.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,7 +17,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/CashoutHistoryList"
         android:clickable="false"/>
-    <Button 
+    <Button
         android:id="@+id/HistoryCancelButton"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
@@ -24,3 +25,4 @@
         android:textColor="@android:color/black"
         android:layout_gravity="center"/>
 </LinearLayout>
+
